# supabase-py

./: CHANGELOG.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
supabase/: __init__.py
supabase/client/: __init__.py  auth.py  default.py  exceptions.py  services.py
supabase/lib/: __init__.py  client_options.py  realtime_client.py
tests/: __init__.py  conftest.py  test_client.py  test_client_default.py  test_client_options.py  test_function_configuration.py
